# scripter

./: Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: rust.yml  update_version.yml
data/: scripter_config.json  scrtr.bat  scrtr.sh
data/common/: scripter_config.json
data/linux/: scripter_config.json  spr.sh
data/linux/example_scripts/: example_script_1.sh
data/windows/: scripter_config.json  spr.bat  spr.sh
data/windows/example_scripts/: example_script_1.bat
res/: icon.rgba  resources.rc  resources.res
src/: app_arguments.rs  color_utils.rs  config.rs  config_updaters.rs  custom_keybinds.rs  drag_and_drop.rs  drag_and_drop_list.rs  events.rs  execution.rs  execution_lists.rs  execution_thread.rs  file_utils.rs  git_support.rs  json_config_updater.rs  json_file_updater.rs  key_mapping.rs  keybind_editing.rs  main.rs  main_window.rs  main_window_utils.rs  main_window_widgets.rs  parallel_execution_manager.rs  ring_buffer.rs  scenario.rs  scenario_updaters.rs  sorted_vec.rs  sparse_set.rs  string_constants.rs  style.rs  ui_icons.rs
