[package]
name = "scripter"
version = "0.18.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
crossbeam-channel = { version = "0.5.13", default-features = false, features = ["std"] }
iced = { version = "0.12.1", default-features = false, features = ["debug", "smol", "advanced", "lazy", "image", "wgpu", "fira-sans"] }
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.117", default-features = false, features = ["std"] }
once_cell = { version = "1.19.0", default-features = false }
open = { version = "5.1.4", default-features = false }
bitflags = { version = "2.5.0", default-features = false, features = ["serde"] }
notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }
smol_str = { version = "0.2.2", default-features = false }
sparse_set_container = { version = "1.1.1", default-features = false }

