[package]
name = "scripter"
version = "1.0.1"
edition = "2021"

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
crossbeam-channel = { version = "0.5.15", default-features = false, features = ["std"] }
iced = { version = "0.13.1", default-features = false, features = ["debug", "smol", "advanced", "lazy", "image", "wgpu", "fira-sans"] }
rand = { version = "0.9.2", default-features = false, features = ["std", "std_rng", "thread_rng"] }
serde = { version = "1.0.225", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.145", default-features = false, features = ["std"] }
once_cell = { version = "1.21.3", default-features = false }
open = { version = "5.3.2", default-features = false }
bitflags = { version = "2.9.4", default-features = false, features = ["serde"] }
notify = { version = "8.2.0", default-features = false, features = ["macos_kqueue"] }
smol_str = { version = "0.2.2", default-features = false }
sparse_set_container = { version = "1.2.2", default-features = false }

